refactor: change template folder path
feat: update category template

--- a/internal/cmd/templates/api_tmpl/deployments/docker-compose.yaml.tmpl
+++ b/internal/cmd/templates/api_tmpl/deployments/docker-compose.yaml.tmpl
@@ -4,7 +4,7 @@ services:
     image: {{.ProjectName}}:latest
     restart: always
     build:
-      context: ..
+      context: ../..
       dockerfile: ../../templates/build/Dockerfile
     ports:
       - "3000:3000"
